flex container spacing fixed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -729,8 +729,6 @@ ul.pagination {
     display: -ms-flex;
     display: -webkit-flex;
     display: flex;
-    width: 75%;
-    
 
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
@@ -739,11 +737,17 @@ ul.pagination {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    
+    justify-content: space-around;
+    background-color: #455b64;
+    
 }
 
 .flex-item {
     position: relative;
     display: inline-block;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 .flex-item-spacing {
@@ -782,4 +786,5 @@ ul.pagination {
 
 img {
   max-width: 100%;
+  
 }
